--- a/app/category.html
+++ b/app/category.html
@@ -179,13 +179,13 @@
 
                             <div class="pull-right">
                                 <div class="user-panel">
-                                    <div><span class="visible-lg">LG</span></div>
+                                    <!--<div><span class="visible-lg">LG</span></div>
                                     <div><span class="visible-md">MD</span></div>
                                     <div><span class="visible-sm">SM</span></div>
-                                    <div><span class="visible-xs">XS</span></div>
+                                    <div><span class="visible-xs">XS</span></div>-->
 
                                     <div class="notifications pull-left dropdown">
-                                        <a href="#" class="notification button"><i class="fa fa-bell-o"></i></a>
+                                        <a href="#" class="notification button"><i class="fa fa-bell-o dropdown-arrow"></i></a>
                                         <div class="dropdown-container">
                                             <div class="container-header">
                                                 <div class="title">
@@ -637,19 +637,19 @@
                                 <div class="on-page">
                                     Всего статей: <span class="count">121</span>
                                 </div>
-                                <div class="sortby">
+                                <div class="sort">
                                     <span>Сортировать по:</span>
                                     <div class="sortby dropdown">
-                                        <a href="#" class="button">дате</a>
+                                        <a href="#" class="dropdown-arrow">дате</a>
                                         <div class="dropdown-container">
                                             <div class="container-body">
-                                                <select name="sortby">
-                                                    <option value="published_at" selected="">дате</option>
-                                                    <option value="popular">рейтингу (оценке)</option>
-                                                    <option value="price">просмотрам</option>
-                                                    <option value="rating">комментариям</option>
-                                                    <option value="popular">количеству сохранивших</option>
-                                                </select>
+                                                <ul class="select-list">
+                                                    <li data-value="published_at selected">дате</li>
+                                                    <li data-value="popular">рейтингу (оценке)</li>
+                                                    <li data-value="price">просмотрам</li>
+                                                    <li data-value="rating">комментариям</li>
+                                                    <li data-value="popular">количеству сохранивших</li>
+                                                </ul>
                                             </div>
                                         </div>
                                     </div>
