--- a/app/page.html
+++ b/app/page.html
@@ -179,13 +179,13 @@
 
                             <div class="pull-right">
                                 <div class="user-panel">
-                                    <div><span class="visible-lg">LG</span></div>
+                                    <!--<div><span class="visible-lg">LG</span></div>
                                     <div><span class="visible-md">MD</span></div>
                                     <div><span class="visible-sm">SM</span></div>
-                                    <div><span class="visible-xs">XS</span></div>
+                                    <div><span class="visible-xs">XS</span></div>-->
 
                                     <div class="notifications pull-left dropdown">
-                                        <a href="#" class="notification button"><i class="fa fa-bell-o"></i></a>
+                                        <a href="#" class="notification button"><i class="fa fa-bell-o dropdown-arrow"></i></a>
                                         <div class="dropdown-container">
                                             <div class="container-header">
                                                 <div class="title">
