Dropdown (для сортировки).

--- a/app/category.html
+++ b/app/category.html
@@ -578,58 +578,58 @@
                             </p>
 
 
-                            <div class="row">
-                                <div class="menu submenu">
-                                    <div class="col-md-4">
-                                        <a href="#" class="item">
-                                            <span class="title">
-                                                ВАЗ 2101, ВАЗ 2102, ВАЗ 2105, ВАЗ 2106, ВАЗ 2107, Жигули, Классика
-                                            </span>
-                                            <small class="count">29</small>
-                                        </a>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <a href="#" class="item">
-                                            <span class="title">
-                                                ВАЗ 2108, ВАЗ 2109, ВАЗ 2110, ВАЗ 1117 Калина, ВАЗ 2170 Приора
-                                            </span>
-                                            <small class="count">18</small>
-                                        </a>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <a href="#" class="item">
-                                            <span class="title">
-                                                Daewoo Lanos, Nexia, Matiz, Sens
-                                            </span>
-                                            <small class="count">55</small>
-                                        </a>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <a href="#" class="item">
-                                            <span class="title">
-                                                Mitsubishi (Мицубиси)
-                                            </span>
-                                            <small class="count">2</small>
-                                        </a>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <a href="#" class="item">
-                                            <span class="title">
-                                                Таврия, Славута, ЗАЗ-1102
-                                            </span>
-                                            <small class="count">10</small>
-                                        </a>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <a href="#" class="item">
-                                            <span class="title">
-                                                Chery (Чери)
-                                            </span>
-                                            <small class="count">7</small>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
+                            <!--<div class="row">-->
+                                <!--<div class="menu submenu">-->
+                                    <!--<div class="col-md-4">-->
+                                        <!--<a href="#" class="item">-->
+                                            <!--<span class="title">-->
+                                                <!--ВАЗ 2101, ВАЗ 2102, ВАЗ 2105, ВАЗ 2106, ВАЗ 2107, Жигули, Классика-->
+                                            <!--</span>-->
+                                            <!--<small class="count">29</small>-->
+                                        <!--</a>-->
+                                    <!--</div>-->
+                                    <!--<div class="col-md-4">-->
+                                        <!--<a href="#" class="item">-->
+                                            <!--<span class="title">-->
+                                                <!--ВАЗ 2108, ВАЗ 2109, ВАЗ 2110, ВАЗ 1117 Калина, ВАЗ 2170 Приора-->
+                                            <!--</span>-->
+                                            <!--<small class="count">18</small>-->
+                                        <!--</a>-->
+                                    <!--</div>-->
+                                    <!--<div class="col-md-4">-->
+                                        <!--<a href="#" class="item">-->
+                                            <!--<span class="title">-->
+                                                <!--Daewoo Lanos, Nexia, Matiz, Sens-->
+                                            <!--</span>-->
+                                            <!--<small class="count">55</small>-->
+                                        <!--</a>-->
+                                    <!--</div>-->
+                                    <!--<div class="col-md-4">-->
+                                        <!--<a href="#" class="item">-->
+                                            <!--<span class="title">-->
+                                                <!--Mitsubishi (Мицубиси)-->
+                                            <!--</span>-->
+                                            <!--<small class="count">2</small>-->
+                                        <!--</a>-->
+                                    <!--</div>-->
+                                    <!--<div class="col-md-4">-->
+                                        <!--<a href="#" class="item">-->
+                                            <!--<span class="title">-->
+                                                <!--Таврия, Славута, ЗАЗ-1102-->
+                                            <!--</span>-->
+                                            <!--<small class="count">10</small>-->
+                                        <!--</a>-->
+                                    <!--</div>-->
+                                    <!--<div class="col-md-4">-->
+                                        <!--<a href="#" class="item">-->
+                                            <!--<span class="title">-->
+                                                <!--Chery (Чери)-->
+                                            <!--</span>-->
+                                            <!--<small class="count">7</small>-->
+                                        <!--</a>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</div>-->
                         </div>
 
                         <div class="blog with-filters">
