Исправление отображения логотипов (в header и footer) для WindowsPhone IE. Исправление ширины полей input для WindowsPhone IE. "Свежие" -> "Новые" в sidebar.

--- a/app/contacts.html
+++ b/app/contacts.html
@@ -665,7 +665,7 @@
                         <div class="widget-title">
                             <h4 class="title">Вопросы пользователей</h4>
                             <div class="filters">
-                                <a class="active" href="#">свежие</a>
+                                <a class="active" href="#">новые</a>
                                 <a href="#">лучшие</a>
                                 <a href="#">популярные</a>
                             </div>
@@ -728,7 +728,7 @@
                         <div class="widget-title">
                             <h4 class="title">Статьи за неделю</h4>
                             <div class="filters">
-                                <a class="active" href="#">свежие</a>
+                                <a class="active" href="#">новые</a>
                                 <a href="#">лучшие</a>
                                 <a href="#">популярные</a>
                             </div>
@@ -888,7 +888,7 @@
                         <div class="widget-title">
                             <h4 class="title">Ответы пользователей</h4>
                             <div class="filters">
-                                <a class="active" href="#">свежие</a>
+                                <a class="active" href="#">новые</a>
                                 <a href="#">лучшие</a>
                                 <a href="#">популярные</a>
                             </div>
