--- a/app/question.html
+++ b/app/question.html
@@ -656,7 +656,7 @@
                         <div class="widget-title">
                             <h4 class="title">Вопросы пользователей</h4>
                             <div class="filters">
-                                <a class="active" href="#">свежие</a>
+                                <a class="active" href="#">новые</a>
                                 <a href="#">лучшие</a>
                                 <a href="#">популярные</a>
                             </div>
@@ -719,7 +719,7 @@
                         <div class="widget-title">
                             <h4 class="title">Статьи за неделю</h4>
                             <div class="filters">
-                                <a class="active" href="#">свежие</a>
+                                <a class="active" href="#">новые</a>
                                 <a href="#">лучшие</a>
                                 <a href="#">популярные</a>
                             </div>
@@ -879,7 +879,7 @@
                         <div class="widget-title">
                             <h4 class="title">Ответы пользователей</h4>
                             <div class="filters">
-                                <a class="active" href="#">свежие</a>
+                                <a class="active" href="#">новые</a>
                                 <a href="#">лучшие</a>
                                 <a href="#">популярные</a>
                             </div>
