--- a/app/page.html
+++ b/app/page.html
@@ -971,7 +971,7 @@
                         <div class="widget-title">
                             <h4 class="title">Вопросы пользователей</h4>
                             <div class="filters">
-                                <a class="active" href="#">свежие</a>
+                                <a class="active" href="#">новые</a>
                                 <a href="#">лучшие</a>
                                 <a href="#">популярные</a>
                             </div>
@@ -1034,7 +1034,7 @@
                         <div class="widget-title">
                             <h4 class="title">Статьи за неделю</h4>
                             <div class="filters">
-                                <a class="active" href="#">свежие</a>
+                                <a class="active" href="#">новые</a>
                                 <a href="#">лучшие</a>
                                 <a href="#">популярные</a>
                             </div>
@@ -1194,7 +1194,7 @@
                         <div class="widget-title">
                             <h4 class="title">Ответы пользователей</h4>
                             <div class="filters">
-                                <a class="active" href="#">свежие</a>
+                                <a class="active" href="#">новые</a>
                                 <a href="#">лучшие</a>
                                 <a href="#">популярные</a>
                             </div>
