--- a/app/profile-aricles.html
+++ b/app/profile-aricles.html
@@ -987,7 +987,7 @@
                         <div class="widget-title">
                             <h4 class="title">Вопросы пользователей</h4>
                             <div class="filters">
-                                <a class="active" href="#">свежие</a>
+                                <a class="active" href="#">новые</a>
                                 <a href="#">лучшие</a>
                                 <a href="#">популярные</a>
                             </div>
@@ -1050,7 +1050,7 @@
                         <div class="widget-title">
                             <h4 class="title">Статьи за неделю</h4>
                             <div class="filters">
-                                <a class="active" href="#">свежие</a>
+                                <a class="active" href="#">новые</a>
                                 <a href="#">лучшие</a>
                                 <a href="#">популярные</a>
                             </div>
@@ -1210,7 +1210,7 @@
                         <div class="widget-title">
                             <h4 class="title">Ответы пользователей</h4>
                             <div class="filters">
-                                <a class="active" href="#">свежие</a>
+                                <a class="active" href="#">новые</a>
                                 <a href="#">лучшие</a>
                                 <a href="#">популярные</a>
                             </div>
