--- a/app/profile-messages.html
+++ b/app/profile-messages.html
@@ -729,7 +729,7 @@
                         <div class="widget-title">
                             <h4 class="title">Вопросы пользователей</h4>
                             <div class="filters">
-                                <a class="active" href="#">свежие</a>
+                                <a class="active" href="#">новые</a>
                                 <a href="#">лучшие</a>
                                 <a href="#">популярные</a>
                             </div>
@@ -792,7 +792,7 @@
                         <div class="widget-title">
                             <h4 class="title">Статьи за неделю</h4>
                             <div class="filters">
-                                <a class="active" href="#">свежие</a>
+                                <a class="active" href="#">новые</a>
                                 <a href="#">лучшие</a>
                                 <a href="#">популярные</a>
                             </div>
@@ -952,7 +952,7 @@
                         <div class="widget-title">
                             <h4 class="title">Ответы пользователей</h4>
                             <div class="filters">
-                                <a class="active" href="#">свежие</a>
+                                <a class="active" href="#">новые</a>
                                 <a href="#">лучшие</a>
                                 <a href="#">популярные</a>
                             </div>
