--- a/app/page.html
+++ b/app/page.html
@@ -253,7 +253,7 @@
                                         </div>
                                     </div>
                                     <div class="messages pull-left dropdown">
-                                        <a href="#" class="notification button"><i class="fa fa-paper-plane-o"></i></a>
+                                        <a href="#" class="notification button"><i class="fa fa-paper-plane-o dropdown-arrow"></i></a>
                                         <div class="dropdown-container">
                                             <div class="container-header">
                                                 <div class="title">
@@ -309,7 +309,7 @@
                                         </div>
                                     </div>
                                     <div class="letters pull-left dropdown">
-                                        <a href="#" class="notification button"><i class="fa fa-envelope"></i></a>
+                                        <a href="#" class="notification button"><i class="fa fa-envelope dropdown-arrow"></i></a>
                                         <div class="dropdown-container">
                                             <div class="container-header">
                                                 <div class="title">
