Профиль пользователя: редактирование (верстка).

--- a/app/profile-edit.html
+++ b/app/profile-edit.html
@@ -708,8 +708,14 @@
                                     <div class="form-group" title="Email">
                                         <input name="subject" type="text" placeholder="Email" value="avtorem.info@yandex.ru">
                                     </div>
+                                </div>
+                                <div class="col-md-5 col-sm-5">
+
+                                </div>
+
+                                <div class="col-md-12">
                                     <div class="form-group" title="О себе">
-                                        <textarea name="text" rows="5" placeholder="Текст письма *"></textarea>
+                                        <textarea name="text" rows="5" placeholder="Текст письма *">Зовут меня Плахотин Иван. Родился, живу и работаю в «Первой столице» Украины, славном городе Харькове. Там же закончил школу и университет ХГТУСХ имени П. Василенко, с дипломом инженера-механика по ремонту и обслуживанию с\х техники. И вот уже более 10 лет своей жизни посвятил ремонту легковых автомобилей в своей небольшой мастерской. Все статьи на сайте написал лично, исходя из персонального опыта и багажа знаний. И практически все фотографии сделал сам, как говорится «в рабочей обстановке».</textarea>
                                     </div>
                                     <div class="form-group input-group">
                                         <div class="fixed">
@@ -721,26 +727,10 @@
                                     </div>
                                     <button class="button accent-button pull-right" type="button">Отправить</button>
                                 </div>
-                                <div class="col-md-5 col-sm-5">
-
-                                </div>
                             </div>
 
                             <div class="small-description m-b-0">О себе:</div>
-                            <div class="text page-text">
-                                <p>
-                                    Зовут меня Плахотин Иван. Родился, живу и работаю
-                                    в «Первой столице» Украины, славном городе Харькове.
-                                    Там же закончил школу и университет ХГТУСХ
-                                    имени П. Василенко, с дипломом инженера-механика
-                                    по ремонту и обслуживанию с\х техники. И вот уже более
-                                    10 лет своей жизни посвятил ремонту легковых автомобилей
-                                    в своей небольшой мастерской. Все статьи на сайте написал
-                                    лично, исходя из персонального опыта и багажа знаний.
-                                    И практически все фотографии сделал сам, как говорится
-                                    «в рабочей обстановке».
-                                </p>
-                            </div>
+
                         </form>
                     </section>
                 </div>
